syntax = "proto3";

package fabchain.fab;

import "gogoproto/gogo.proto";
import "fabchain/fab/params.proto";
import "fabchain/fab/user.proto";
import "fabchain/fab/filestore.proto";
import "fabchain/fab/agency.proto";
import "fabchain/fab/product.proto";
import "fabchain/fab/storefront.proto";
import "fabchain/fab/request.proto";
import "fabchain/fab/pricer.proto";
import "fabchain/fab/manufacture.proto";
import "fabchain/fab/capability.proto";
import "fabchain/fab/response.proto";
import "fabchain/fab/order.proto";

option go_package = "fabchain/x/fab/types";

// GenesisState defines the fab module's genesis state.
message GenesisState {
           Params      params           =  1 [(gogoproto.nullable) = false];
  repeated User        userList         =  2 [(gogoproto.nullable) = false];
           uint64      userCount        =  3;
  repeated Filestore   filestoreList    =  4 [(gogoproto.nullable) = false];
           uint64      filestoreCount   =  5;
  repeated Agency      agencyList       =  6 [(gogoproto.nullable) = false];
           uint64      agencyCount      =  7;
  repeated Product     productList      =  8 [(gogoproto.nullable) = false];
           uint64      productCount     =  9;
  repeated Storefront  storefrontList   = 10 [(gogoproto.nullable) = false];
           uint64      storefrontCount  = 11;
  repeated Request     requestList      = 12 [(gogoproto.nullable) = false];
           uint64      requestCount     = 13;
  repeated Pricer      pricerList       = 14 [(gogoproto.nullable) = false];
           uint64      pricerCount      = 15;
  repeated Manufacture manufactureList  = 16 [(gogoproto.nullable) = false];
           uint64      manufactureCount = 17;
  repeated Capability  capabilityList   = 18 [(gogoproto.nullable) = false];
           uint64      capabilityCount  = 19;
  repeated Response    responseList     = 20 [(gogoproto.nullable) = false];
           uint64      responseCount    = 21;
  repeated Order       orderList        = 22 [(gogoproto.nullable) = false];
           uint64      orderCount       = 23;
}

